Bug 1444379 - add error checking to call sites of GetDefaultPrompt() to avoid crash in nsMsgComposeAndSend::NotifyListenerOnStopCopy() and elsewhere. r=jorgk

Especially for the shutdown case, it may not be possible to get a prompt